fix(ui): issues with safari mobile browser bottom tab overlapping task form"

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,11 +1,18 @@
 .app {
   display: grid;
-  grid-template-rows: 84svh 1fr;
+  grid-template-rows: 84dvh 1fr;
   max-width: 640px;
   margin: 0 auto;
   height: 100vh;
+  height: 100dvh;
   padding: 1rem;
   box-sizing: border-box;
   gap: 1rem;
   overflow: hidden;
+}
+
+@media (max-width: 768px) {
+  .app {
+    grid-template-rows: 1fr auto;
+  }
 }
